...
      refetchSpeakers(),
    ]);
  };

  return (
    <LinearGradient
      testID="home-screen"
      colors={[colors.gradientStart, colors.gradientMiddle, colors.gradientEnd]}
      style={styles.container}
    >
      {hasBackgroundArt && (
        <TenantBackgroundArt
          style={[styles.backgroundArt, { width, height: artworkHeight }]}
...
