...
      console.error("Error sharing:", error);
    }
  };

  if (isLoadingUser) {
    return (
      <SafeAreaView testID="badge-screen" style={styles.loadingContainer}>
        <ActivityIndicator size="large" color={colors.brand} />
        <ThemedText style={styles.loadingText}>
          {t("digitalId.loadingBadge")}
        </ThemedText>
      </SafeAreaView>
    );
...
